--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,19 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div class="container">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+  <div class="col-md-12" days="days" data-temp-control></div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+
+
+  <div class="day col-md-12" ng-repeat="day in days">
+
+    <h2>{{day.name}}</h2>
+
+    <div class="hour col-md-12" ng-repeat="hour in day.hours">
+      <div class="col-md-1 time-view">{{hour.index}}</div>
+      <div class="col-md-10 slider-view">
+        <input type="range"  min="0" max="27" step="1"  ng-model="hour.temperature" /></div>
+      <div class="col-md-1 temperature-view">{{hour.temperature}}</div>
+    </div>
+  </div>
 </div>
