--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
 
   <div class="col-md-12" days="days" data-temp-control></div>
 
-
+<button ng-click="update()">Save</button>
 
   <div class="day col-md-12" ng-repeat="day in days">
 
